implemented light source refueling using prop-defined items

--- a/resources/assets/rekindled/lang/en.json
+++ b/resources/assets/rekindled/lang/en.json
@@ -6,7 +6,7 @@
 	"game:block-torch-crude-extinct-*": "Crude Torch (Extinguished)",
 	"game:blockdesc-torch-crude-extinct-*": "A crudely made, extinguished torch that burns for up to 30 real-time minutes.",
 	"game:block-torch-crude-burnedout-*": "Crude Torch (Burned Out)",
-	"game:blockdesc-torch-crude-burnedout-*": "A crudely made, burned out torch that will no longer light. The tip can be recycled for charcoal.",
+	"game:blockdesc-torch-crude-burnedout-*": "A crudely made, burned out torch that will no longer light.",
 
 	"game:block-torch-basic-lit-*": "Basic Torch (Lit)",
 	"game:blockdesc-torch-basic-lit-*": "A simple torch that burns for up to 2 real-time hours.",
@@ -15,7 +15,7 @@
 	"game:block-torch-basic-extinct-*": "Basic Torch (Extinguished)",
 	"game:blockdesc-torch-basic-extinct-*": "A simple, extinguished torch that burns for up to 2 real-time hours.",
 	"game:block-torch-basic-burnedout-*": "Basic Torch (Burned Out)",
-	"game:blockdesc-torch-basic-burnedout-*": "A simple, burned out torch that will no longer light. The tip can be recycled for charcoal.",
+	"game:blockdesc-torch-basic-burnedout-*": "A simple, burned out torch that will no longer light.",
 
 	"game:block-torch-basic-lit-up": "Basic Torch (Lit)",
 	"game:blockdesc-torch-basic-lit-up": "A simple torch that burns for up to 2 real-time hours.",
@@ -24,7 +24,7 @@
 	"game:block-torch-basic-extinct-up": "Basic Torch (Extinguished)",
 	"game:blockdesc-torch-basic-extinct-up": "A simple, extinguished torch that burns for up to 2 real-time hours.",
 	"game:block-torch-basic-burnedout-up": "Basic Torch (Burned Out)",
-	"game:blockdesc-torch-basic-burnedout-up": "A simple, burned out torch that will no longer light. The tip can be recycled for charcoal.",
+	"game:blockdesc-torch-basic-burnedout-up": "A simple, burned out torch that will no longer light.",
 
 	"game:block-torch-cloth-lit-*": "Cloth Torch (Lit)",
 	"game:blockdesc-torch-cloth-lit-*": "A long-lasting torch that burns for up to 4 real-time hours.",
@@ -33,5 +33,5 @@
 	"game:block-torch-cloth-extinct-*": "Cloth Torch (Extinguished)",
 	"game:blockdesc-torch-cloth-extinct-*": "A long-lasting, extinguished torch that burns for up to 4 real-time hours.",
 	"game:block-torch-cloth-burnedout-*": "Cloth Torch (Burned Out)",
-	"game:blockdesc-torch-cloth-burnedout-*": "A long-lasting, burned out torch that will no longer light. The tip can be recycled for charcoal."
+	"game:blockdesc-torch-cloth-burnedout-*": "A long-lasting, burned out torch that will no longer light."
 }
