--- a/resources/assets/rekindled/lang/en.json
+++ b/resources/assets/rekindled/lang/en.json
@@ -1,46 +1,46 @@
 {
-	"game:block-torch-crude-lit-*": "Crude Torch (Lit)",
-	"game:blockdesc-torch-crude-Lit-*": "A crudely made torch that burns for up to 30 real-time minutes.",
-	"game:block-torch-crude-unlit-*": "Crude Torch (Unlit)",
-	"game:blockdesc-torch-crude-unlit-*": "A freshly (and crudely) made torch that burns for up to 30 real-time minutes.",
-	"game:block-torch-crude-extinct-*": "Crude Torch (Extinguished)",
-	"game:blockdesc-torch-crude-extinct-*": "A crudely made, extinguished torch that burns for up to 30 real-time minutes.",
-	"game:block-torch-crude-burnedout-*": "Crude Torch (Burned Out)",
-	"game:blockdesc-torch-crude-burnedout-*": "A crudely made, burned out torch that will no longer light.",
+	"block-torch-crude-lit-*": "Crude Torch (Lit)",
+	"blockdesc-torch-crude-Lit-*": "A crudely made torch that burns for up to 30 real-time minutes.",
+	"block-torch-crude-unlit-*": "Crude Torch (Unlit)",
+	"blockdesc-torch-crude-unlit-*": "A freshly (and crudely) made torch that burns for up to 30 real-time minutes.",
+	"block-torch-crude-extinct-*": "Crude Torch (Extinguished)",
+	"blockdesc-torch-crude-extinct-*": "A crudely made, extinguished torch that burns for up to 30 real-time minutes.",
+	"block-torch-crude-burnedout-*": "Crude Torch (Burned Out)",
+	"blockdesc-torch-crude-burnedout-*": "A crudely made, burned out torch that will no longer light.",
 
-	"game:block-torch-basic-lit-*": "Basic Torch (Lit)",
-	"game:blockdesc-torch-basic-lit-*": "A simple torch that burns for up to 2 real-time hours.",
-	"game:block-torch-basic-unlit-*": "Basic Torch (Unlit)",
-	"game:blockdesc-torch-basic-unlit-*": "A freshly made, simple torch that burns for up to 2 real-time hours.",
-	"game:block-torch-basic-extinct-*": "Basic Torch (Extinguished)",
-	"game:blockdesc-torch-basic-extinct-*": "A simple, extinguished torch that burns for up to 2 real-time hours.",
-	"game:block-torch-basic-burnedout-*": "Basic Torch (Burned Out)",
-	"game:blockdesc-torch-basic-burnedout-*": "A simple, burned out torch that will no longer light.",
+	"block-torch-basic-lit-*": "Basic Torch (Lit)",
+	"blockdesc-torch-basic-lit-*": "A simple torch that burns for up to 2 real-time hours.",
+	"block-torch-basic-unlit-*": "Basic Torch (Unlit)",
+	"blockdesc-torch-basic-unlit-*": "A freshly made, simple torch that burns for up to 2 real-time hours.",
+	"block-torch-basic-extinct-*": "Basic Torch (Extinguished)",
+	"blockdesc-torch-basic-extinct-*": "A simple, extinguished torch that burns for up to 2 real-time hours.",
+	"block-torch-basic-burnedout-*": "Basic Torch (Burned Out)",
+	"blockdesc-torch-basic-burnedout-*": "A simple, burned out torch that will no longer light.",
 
-	"game:block-torch-basic-lit-up": "Basic Torch (Lit)",
-	"game:blockdesc-torch-basic-lit-up": "A simple torch that burns for up to 2 real-time hours.",
-	"game:block-torch-basic-unlit-up": "Basic Torch (Unlit)",
-	"game:blockdesc-torch-basic-unlit-up": "A freshly made, simple torch that burns for up to 2 real-time hours.",
-	"game:block-torch-basic-extinct-up": "Basic Torch (Extinguished)",
-	"game:blockdesc-torch-basic-extinct-up": "A simple, extinguished torch that burns for up to 2 real-time hours.",
-	"game:block-torch-basic-burnedout-up": "Basic Torch (Burned Out)",
-	"game:blockdesc-torch-basic-burnedout-up": "A simple, burned out torch that will no longer light.",
+	"block-torch-basic-lit-up": "Basic Torch (Lit)",
+	"blockdesc-torch-basic-lit-up": "A simple torch that burns for up to 2 real-time hours.",
+	"block-torch-basic-unlit-up": "Basic Torch (Unlit)",
+	"blockdesc-torch-basic-unlit-up": "A freshly made, simple torch that burns for up to 2 real-time hours.",
+	"block-torch-basic-extinct-up": "Basic Torch (Extinguished)",
+	"blockdesc-torch-basic-extinct-up": "A simple, extinguished torch that burns for up to 2 real-time hours.",
+	"block-torch-basic-burnedout-up": "Basic Torch (Burned Out)",
+	"blockdesc-torch-basic-burnedout-up": "A simple, burned out torch that will no longer light.",
 
-	"game:block-torch-cloth-lit-*": "Cloth Torch (Lit)",
-	"game:blockdesc-torch-cloth-lit-*": "A long-lasting torch that burns for up to 4 real-time hours.",
-	"game:block-torch-cloth-unlit-*": "Cloth Torch (Unlit)",
-	"game:blockdesc-torch-cloth-unlit-*": "A freshly made, long-lasting torch that burns for up to 4 real-time hours.",
-	"game:block-torch-cloth-extinct-*": "Cloth Torch (Extinguished)",
-	"game:blockdesc-torch-cloth-extinct-*": "A long-lasting, extinguished torch that burns for up to 4 real-time hours.",
-	"game:block-torch-cloth-burnedout-*": "Cloth Torch (Burned Out)",
-	"game:blockdesc-torch-cloth-burnedout-*": "A long-lasting, burned out torch that will no longer light.",
+	"block-torch-cloth-lit-*": "Cloth Torch (Lit)",
+	"blockdesc-torch-cloth-lit-*": "A long-lasting torch that burns for up to 4 real-time hours.",
+	"block-torch-cloth-unlit-*": "Cloth Torch (Unlit)",
+	"blockdesc-torch-cloth-unlit-*": "A freshly made, long-lasting torch that burns for up to 4 real-time hours.",
+	"block-torch-cloth-extinct-*": "Cloth Torch (Extinguished)",
+	"blockdesc-torch-cloth-extinct-*": "A long-lasting, extinguished torch that burns for up to 4 real-time hours.",
+	"block-torch-cloth-burnedout-*": "Cloth Torch (Burned Out)",
+	"blockdesc-torch-cloth-burnedout-*": "A long-lasting, burned out torch that will no longer light.",
 
-	"game:block-oillamp-lit-*": "Oil Lamp (Lit)",
-	"game:block-oillamp-unlit-*": "Oil Lamp (Unlit)",
-	"game:block-oillamp-extinct-*": "Oil Lamp (Extinguished)",
-	"game:block-oillamp-burnedout-*": "Oil Lamp (Burned Out)",
-	"game:blockdesc-oillamp-lit-*": "An oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
-	"game:blockdesc-oillamp-unlit-*": "A freshly-made oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
-	"game:blockdesc-oillamp-extinct-*": "An extinguished oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
-	"game:blockdesc-oillamp-burnedout-*": "A burned out oil lamp that has run out of fuel. Can be refueled with Animal Fat."
+	"block-oillamp-lit-*": "Oil Lamp (Lit)",
+	"block-oillamp-unlit-*": "Oil Lamp (Unlit)",
+	"block-oillamp-extinct-*": "Oil Lamp (Extinguished)",
+	"block-oillamp-burnedout-*": "Oil Lamp (Burned Out)",
+	"blockdesc-oillamp-lit-*": "An oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
+	"blockdesc-oillamp-unlit-*": "A freshly-made oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
+	"blockdesc-oillamp-extinct-*": "An extinguished oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
+	"blockdesc-oillamp-burnedout-*": "A burned out oil lamp that has run out of fuel. Can be refueled with Animal Fat."
 }
