descriptions now use lang file with placeholders

--- a/resources/assets/rekindled/lang/en.json
+++ b/resources/assets/rekindled/lang/en.json
@@ -1,46 +1,55 @@
 {
-	"block-torch-crude-lit-*": "Crude Torch (Lit)",
-	"blockdesc-torch-crude-Lit-*": "A crudely made torch that burns for up to 30 real-time minutes.",
-	"block-torch-crude-unlit-*": "Crude Torch (Unlit)",
-	"blockdesc-torch-crude-unlit-*": "A freshly (and crudely) made torch that burns for up to 30 real-time minutes.",
-	"block-torch-crude-extinct-*": "Crude Torch (Extinguished)",
-	"blockdesc-torch-crude-extinct-*": "A crudely made, extinguished torch that burns for up to 30 real-time minutes.",
-	"block-torch-crude-burnedout-*": "Crude Torch (Burned Out)",
-	"blockdesc-torch-crude-burnedout-*": "A crudely made, burned out torch that will no longer light.",
+	"block-torchtransient-crude-lit-*": "Crude Torch (Lit)",
+	"blockdesc-torchtransient-crude-Lit-*": "A crudely made torch that burns for up to 30 real-time minutes.",
+	"block-torchtransient-crude-unlit-*": "Crude Torch (Unlit)",
+	"blockdesc-torchtransient-crude-unlit-*": "A freshly (and crudely) made torch that burns for up to 30 real-time minutes.",
+	"block-torchtransient-crude-extinct-*": "Crude Torch (Extinguished)",
+	"blockdesc-torchtransient-crude-extinct-*": "A crudely made, extinguished torch that burns for up to 30 real-time minutes.",
+	"block-torchtransient-crude-burnedout-*": "Crude Torch (Burned Out)",
+	"blockdesc-torchtransient-crude-burnedout-*": "A crudely made, burned out torch that will no longer light.",
 
-	"block-torch-basic-lit-*": "Basic Torch (Lit)",
-	"blockdesc-torch-basic-lit-*": "A simple torch that burns for up to 2 real-time hours.",
-	"block-torch-basic-unlit-*": "Basic Torch (Unlit)",
-	"blockdesc-torch-basic-unlit-*": "A freshly made, simple torch that burns for up to 2 real-time hours.",
-	"block-torch-basic-extinct-*": "Basic Torch (Extinguished)",
-	"blockdesc-torch-basic-extinct-*": "A simple, extinguished torch that burns for up to 2 real-time hours.",
-	"block-torch-basic-burnedout-*": "Basic Torch (Burned Out)",
-	"blockdesc-torch-basic-burnedout-*": "A simple, burned out torch that will no longer light.",
+	"block-torchtransient-basic-lit-*": "Basic Torch (Lit)",
+	"blockdesc-torchtransient-basic-lit-*": "A simple torch that burns for up to 2 real-time hours.",
+	"block-torchtransient-basic-unlit-*": "Basic Torch (Unlit)",
+	"blockdesc-torchtransient-basic-unlit-*": "A freshly made, simple torch that burns for up to 2 real-time hours.",
+	"block-torchtransient-basic-extinct-*": "Basic Torch (Extinguished)",
+	"blockdesc-torchtransient-basic-extinct-*": "A simple, extinguished torch that burns for up to 2 real-time hours.",
+	"block-torchtransient-basic-burnedout-*": "Basic Torch (Burned Out)",
+	"blockdesc-torchtransient-basic-burnedout-*": "A simple, burned out torch that will no longer light.",
 
-	"block-torch-basic-lit-up": "Basic Torch (Lit)",
-	"blockdesc-torch-basic-lit-up": "A simple torch that burns for up to 2 real-time hours.",
-	"block-torch-basic-unlit-up": "Basic Torch (Unlit)",
-	"blockdesc-torch-basic-unlit-up": "A freshly made, simple torch that burns for up to 2 real-time hours.",
-	"block-torch-basic-extinct-up": "Basic Torch (Extinguished)",
-	"blockdesc-torch-basic-extinct-up": "A simple, extinguished torch that burns for up to 2 real-time hours.",
-	"block-torch-basic-burnedout-up": "Basic Torch (Burned Out)",
-	"blockdesc-torch-basic-burnedout-up": "A simple, burned out torch that will no longer light.",
+	"block-torchtransient-basic-lit-up": "Basic Torch (Lit)",
+	"blockdesc-torchtransient-basic-lit-up": "A simple torch that burns for up to 2 real-time hours.",
+	"block-torchtransient-basic-unlit-up": "Basic Torch (Unlit)",
+	"blockdesc-torchtransient-basic-unlit-up": "A freshly made, simple torch that burns for up to 2 real-time hours.",
+	"block-torchtransient-basic-extinct-up": "Basic Torch (Extinguished)",
+	"blockdesc-torchtransient-basic-extinct-up": "A simple, extinguished torch that burns for up to 2 real-time hours.",
+	"block-torchtransient-basic-burnedout-up": "Basic Torch (Burned Out)",
+	"blockdesc-torchtransient-basic-burnedout-up": "A simple, burned out torch that will no longer light.",
 
-	"block-torch-cloth-lit-*": "Cloth Torch (Lit)",
-	"blockdesc-torch-cloth-lit-*": "A long-lasting torch that burns for up to 4 real-time hours.",
-	"block-torch-cloth-unlit-*": "Cloth Torch (Unlit)",
-	"blockdesc-torch-cloth-unlit-*": "A freshly made, long-lasting torch that burns for up to 4 real-time hours.",
-	"block-torch-cloth-extinct-*": "Cloth Torch (Extinguished)",
-	"blockdesc-torch-cloth-extinct-*": "A long-lasting, extinguished torch that burns for up to 4 real-time hours.",
-	"block-torch-cloth-burnedout-*": "Cloth Torch (Burned Out)",
-	"blockdesc-torch-cloth-burnedout-*": "A long-lasting, burned out torch that will no longer light.",
+	"block-torchtransient-cloth-lit-*": "Cloth Torch (Lit)",
+	"blockdesc-torchtransient-cloth-lit-*": "A long-lasting torch that burns for up to 4 real-time hours.",
+	"block-torchtransient-cloth-unlit-*": "Cloth Torch (Unlit)",
+	"blockdesc-torchtransient-cloth-unlit-*": "A freshly made, long-lasting torch that burns for up to 4 real-time hours.",
+	"block-torchtransient-cloth-extinct-*": "Cloth Torch (Extinguished)",
+	"blockdesc-torchtransient-cloth-extinct-*": "A long-lasting, extinguished torch that burns for up to 4 real-time hours.",
+	"block-torchtransient-cloth-burnedout-*": "Cloth Torch (Burned Out)",
+	"blockdesc-torchtransient-cloth-burnedout-*": "A long-lasting, burned out torch that will no longer light.",
 
-	"block-oillamp-lit-*": "Oil Lamp (Lit)",
-	"block-oillamp-unlit-*": "Oil Lamp (Unlit)",
-	"block-oillamp-extinct-*": "Oil Lamp (Extinguished)",
-	"block-oillamp-burnedout-*": "Oil Lamp (Burned Out)",
-	"blockdesc-oillamp-lit-*": "An oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
-	"blockdesc-oillamp-unlit-*": "A freshly-made oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
-	"blockdesc-oillamp-extinct-*": "An extinguished oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
-	"blockdesc-oillamp-burnedout-*": "A burned out oil lamp that has run out of fuel. Can be refueled with Animal Fat."
+	"block-oillamptransient-lit-*": "Oil Lamp (Lit)",
+	"block-oillamptransient-unlit-*": "Oil Lamp (Unlit)",
+	"block-oillamptransient-extinct-*": "Oil Lamp (Extinguished)",
+	"block-oillamptransient-burnedout-*": "Oil Lamp (Burned Out)",
+	"blockdesc-oillamptransient-lit-*": "An oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
+	"blockdesc-oillamptransient-unlit-*": "A freshly-made oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
+	"blockdesc-oillamptransient-extinct-*": "An extinguished oil lamp that burns for up to 4 in-game days. Can be refueled with Animal Fat.",
+	"blockdesc-oillamptransient-burnedout-*": "A burned out oil lamp that has run out of fuel. Can be refueled with Animal Fat.",
+
+	"State: {0}": "State: {0}",
+	"Fuel Hours Remaining: {0}/{1} ({2}%)": "Fuel Hours Remaining: {0}/{1} ({2}%)",
+	"Current Depletion Multiplier: x{0}": "Current Depletion Multiplier: x{0}",
+	"Lit": "Lit",
+	"Unlit": "Unlit",
+	"Extinct": "Extinct",
+	"Burnedout": "Burned Out",
+	"Refueled light source.": "Refueled light source."
 }
